cabal-version:      3.0
name:               simp-json
version:            0.1.0.0
synopsis:           simple json parser in Haskell
description:        simple json parser in Haskell
homepage:           https://github.com/LitFill/???????
license:            MIT
license-file:       LICENSE
author:             LitFill
maintainer:         marrazzy54@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wextra -Werror

library
    import:           warnings
    exposed-modules:  Json.Simple
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
                    , containers
                    , fmt
    hs-source-dirs:   src
    default-language: GHC2024

test-suite simp-json-test
    import:           warnings
    default-language: GHC2024
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        simp-json
